feat: add sidebar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,39 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>嗨，這裡是厭世診所，內容尚在製作中，敬請期待！</h1>
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <nav class="sidebar-nav">
+        <div class="sidebar-logo">
+          <h1>厭世診所</h1>
+        </div>
+        <ul class="sidebar-links">
+          <li>
+            <a
+              href="https://pink-liver.github.io/check-in"
+              class="nav-link"
+              target="_blank"
+            >
+              值班簽到表
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://pink-liver.github.io/battle-for-the-environment/"
+              class="nav-link"
+              target="_blank"
+            >
+              環境守衛戰
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+
+    <!-- Main -->
+    <main class="main-content">
+      <h1>嗨，這裡是厭世診所，內容尚在製作中，敬請期待！</h1>
+    </main>
 
     <!-- Footer -->
     <footer>
